force-app/main/default/objects/CA_LinhaExtrato__c/CA_LinhaExtrato__c.object-meta.xml
<CustomObject>
    <label>Linha do Extrato</label>
    <nameField>
        <displayFormat>LE-{000000}</displayFormat>
        <label>Linha do Extrato Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linhas do Extrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>