force-app/main/default/objects/CA_LinhaExtrato__c/fields/CA_Codigo__c.field-meta.xml
<CustomField>
    <fullName>CA_Codigo__c</fullName>
    <label>Código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>