force-app/main/default/objects/CA_LinhaExtrato__c/fields/CA_Data__c.field-meta.xml
<CustomField>
    <fullName>CA_Data__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>