force-app/main/default/objects/CA_LinhaExtrato__c/fields/CA_Extrato__c.field-meta.xml
<CustomField>
    <fullName>CA_Extrato__c</fullName>
    <label>Extrato</label>
    <referenceTo>CA_Extrato__c</referenceTo>
    <relationshipLabel>Linhas do Extrato</relationshipLabel>
    <relationshipName>LinhasExtrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>