force-app/main/default/objects/CA_LinhaExtrato__c/fields/CA_Imovel__c.field-meta.xml
<CustomField>
    <fullName>CA_Imovel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>CA_Imovel__c</referenceTo>
    <relationshipLabel>Linhas do Extrato</relationshipLabel>
    <relationshipName>LinhasExtrato</relationshipName>
    <type>Lookup</type>
</CustomField>