force-app/main/default/objects/CA_LinhaExtrato__c/fields/CA_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>CA_Lancamento__c</fullName>
    <label>Lançamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>