force-app/main/default/objects/CA_LinhaExtrato__c/fields/CA_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CA_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Débito</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>